# aof-DB

./: .gitignore  COMMITS.md  README.md  RELEASE_NOTES_v2.0.36.md  codemagic.yaml  ideas.md  nedb-distro.js  nedbd-v2.js  package.json  pyproject.toml
.github/workflows/: release-client.yml  release.yml
apps/nedb-studio/: .env.example  README.md  app.contract.ts  index.html  package.json  server.ts  tailwind.config.js  tsconfig.json  vite.config.ts
apps/nedb-studio/routes/: about.page.tsx  docs.page.tsx  index.page.tsx  studio.page.tsx
apps/nedb-studio/src/: index.css  main.tsx
apps/nedb-studio/src/components/: ArtifactTabs.tsx  Marquee.tsx  Nav.tsx  PromptPanel.tsx  QueryConsole.tsx  SchemaGraph.tsx
client/node/: package.json  tsconfig.json
client/node/src/: index.ts
client/python/: README.md  pyproject.toml
client/python/nedb_client/: __init__.py  client.py
python/nedb/: __init__.py  crypto.py  engine.py  log.py  query.py  resp2.py  server.py  snapshot.py  wrap_redis.py
python/nedb/backends/: redis_backend.py
rust/: Cargo.toml  SEGMENTS.md
rust/crates/aof-db/: Cargo.toml
rust/crates/nedb-node/: Cargo.toml
rust/crates/nedb-node/src/: lib.rs
rust/crates/nedb-py/: Cargo.toml  pyproject.toml
rust/crates/nedb-py/src/: lib.rs
rust/nedb-v2/: Cargo.toml
rust/nedb-v2/examples/: v3_bench.rs
rust/nedb-v2/src/: db.rs  lib.rs  nql.rs  segment.rs  server.rs  store.rs
rust/nedb-v2/tests/: v3_integration.rs
tests/: test_causal.py  test_crypto.py  test_dag_perf.py  test_deploy.py  test_native.py  test_the_will.py  test_wrap_redis.py
(+11 files in other folders)
