[package]
name = "nedb-py"
description = "PyO3 bindings for nedb-core-v2 (DAG) → the `nedb` PyPI wheel."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
nedb-core-v2 = { path = "../../nedb-v2" }
serde_json = "1"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
